fix(movement): Fix issue where path isn't reset after arriving at a destination